k8s/apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
  labels:
    app: searxng
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: searxng
